# iron-wolf-webplayer

./: .gitignore  Cargo.toml  README.md  index.html  justfile
_assets/: background.xcf  bj.xcf  bj1.xcf  bj2.xcf  bj3.xcf  splash1.xcf  splash2.xcf  splash3.xcf
src/: app.rs  main.rs
