[package]
name = "iron-wolf-webplayer"
version = "0.1.0"
edition = "2024"

[features]
web = []
debug = []

[dependencies]
eframe = "0.34.1"
egui = "0.34.1"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
log = "0.4.29"
web-sys = { version = "0.3.95", features = ["FileList", "File", "HtmlInputElement", "KeyboardEventInit"] }
js-sys = { version = "0.3.95" }
image = { version = "0.25.10", default-features = false, features = ["png"] }
gloo-net = "0.7.0"
rfd = "0.17.2"
poll-promise = { version = "0.3.0", features = ["web"] }
egui-phosphor = "0.12"

iron-wolf = { version = "0.10.0", features = ["web"] }

[profile.release]
opt-level = "s"
